# python-gstreamer-opencv-webrtc-stream

./: README.md  index.html  main.py  pyproject.toml
